Fixed issue where icons would look inconsistent on iPhone-sized screens.

--- a/index.css
+++ b/index.css
@@ -46,6 +46,7 @@ div {
 a {
     text-decoration: none;
     margin-right: 40px;
+    
 }
 a:last-of-type {
     margin-right: 0;
@@ -54,4 +55,23 @@ img.logo {
     height: 50px;
     filter: invert(100%);
     color: var(--color-foreground);
+}
+
+@media only screen and (max-width: 400px)  {
+    div.site-links {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    img.logo {
+        height: 8vh;
+    }
+    a {
+        flex: 1 0 calc(33% - 40px);
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    a:nth-child(3n) {
+        margin-right: 0;
+    }    
 }
